--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@ animation: AnimationName 12s ease infinite;">
         <iframe class="visualiframe" src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
 
         <div id="aboutMe">
-            <section>
+            <section id="home">
                 <img class="contentAttachment" src="content/sp_img.JPG"></img>
                 <div style="text-align: center;"><h2>My name is Arief, i'm an aspiring creative coder.</h2>
                 <p><em>Since early childhood, i have grown the love for tech.<br /> Growing up, i developed taste for art and aesthetics.<br /> At present, i travelled away from my home country of Indonesia to seek more knowledge and experience.<br /> In the future, i see myself working at the intersection of technology and art. </em></p></div>
