--- a/sco.html
+++ b/sco.html
@@ -62,19 +62,19 @@ animation: AnimationName 12s ease infinite;">
                         <!-- Full-width images with number and caption text -->
                         <div class="mySlides fade">
                             <div class="numbertext">1 / 3</div>
-                            <img src="content/photography/img1.JPG" style="width:100%">
+                            <a href="content/photography/img1.JPG"><img src="content/photography/img1.JPG" style="width:100%"></a>
                             <div class="text">Van Abbemuseum</div>
                         </div>
 
                         <div class="mySlides fade">
                             <div class="numbertext">2 / 3</div>
-                            <img src="content/photography/img2.JPG" style="width:100%">
+                            <a href="content/photography/img2.JPG"><img src="content/photography/img2.JPG" style="width:100%"></a>
                             <div class="text">Philipsdorp</div>
                         </div>
 
                         <div class="mySlides fade">
                             <div class="numbertext">3 / 3</div>
-                            <img src="content/photography/img3.JPG" style="width:100%">
+                            <a href="content/photography/img3.JPG"><img src="content/photography/img3.JPG" style="width:100%"></a>
                             <div class="text">Gerard Phillipslaan</div>
                         </div>
 
