--- a/sprintX.html
+++ b/sprintX.html
@@ -35,7 +35,7 @@ animation: AnimationName 12s ease infinite;">
         <br /><br />
         <section id="content">
             <article>
-                <h2 style="font-size: 40px;margin-bottom: 0;text-align: center;">An Interactive Visual Art with ThreeJS
+                <h2 style="font-size: 40px;margin-bottom: 0;text-align: center;">An Interactive Visual Art Made With ThreeJS
                 </h2>
                 <!-- <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint X</h1> -->
 
@@ -43,7 +43,7 @@ animation: AnimationName 12s ease infinite;">
                 <!-- <p>As an exercise to sharpen my JavaScript skills. </p> -->
                 <!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris condimentum sit amet purus dignissim
                     accumsan. Suspendisse sed scelerisque massa, vel facilisis justo.</p>-->
-                <h2 style="text-align: center; font-style: italic;">The interactive visual aims to provide an immersive
+                <h2 style="text-align: center; font-style: italic;">This interactive visual aims to provide an immersive
                     dive into an abstract universe featuring the "solar squid" motion sculpture and randomly generated
                     "star" particles.</h2>
                 
@@ -132,7 +132,7 @@ controls.dampingFactor = 0.07;
 controls.rotateSpeed = 0.8;
 </pre></code></div>
                 <br />
-                <h2>4. Inheritance Cloner</h2>
+                <h2>4. Making The 'Solar Squid' Motion Sculpture with Inheritance Cloner</h2>
                 <div class="contentPlaceholderHidden"><img style="width: 40%;height: auto;"
                         src="content/inheritanceCloner_Graph.png" alt="Missing file"></div>
                 <br />
@@ -166,14 +166,17 @@ objArray.push(meshes);
     }</code></pre>
                 </div>
                 <br />
-                <h2>5. Animation based on the 'Golden Ratio'</h2>
-                <div class="contentPlaceholderHidden"><img style="width: 75%;height: auto;" class="contentAttachment"
+                <h2>5. Animating The 'Solar Squid' Motion Sculpture Based on The 'Golden Ratio'</h2>
+                <div class="contentPlaceholderHidden"><img style="width: 85%;height: auto;" class="contentAttachment"
                         src="content/1200px-Fibonacci_spiral_34.svg.png" alt="Missing file"></div>
                 <p>The goal i had in mind is to make the objects move(in
                     rotation) with some
-                    certain <em>flow</em>. So i used <code>Math.PI</code> to make the objects move on the circumference
-                    of a circle according to the
-                    <em>golden ratio</em>.</p>
+                    certain <em>flow</em>. Then i got inspired by nature on how would a galaxy and solar system would
+                    revolve according to the Golden Ratio. The Golden Ratio is most often found in nature's reoccurring
+                    organizational patterns like spirals, hierarchies, concentric geometries, and radial patterns. </p>
+                <p>So i used <code>Math.PI</code> as it correlates closely to the Golden Ratio in the
+                    <code>animate()</code> loop function to make the objects move accordingly creating a beautiful
+                    motion based on nature itself.</p>
                 <div class="contentPlaceholder">
                     <pre><code>
 function animate() {
@@ -192,7 +195,7 @@ function animate() {
 };</code></pre>
                 </div>
                 <br />
-                <h3>6. Particle Cloner</h3>
+                <h2>6. Making The 'Star' Particle with Random Cloner</h2>
                 <p>I wanted something to fill in the rest of the empty spaces so then i asked Mr. Chris again on how to
                     achieve this effect and he mentioned that i could reuse the cloner code to make a particle cloner
                     then i introduce
