--- a/ux.html
+++ b/ux.html
@@ -47,6 +47,40 @@ animation: AnimationName 12s ease infinite;">
         <div class="contentDivider">
             <h1 id="dividerText">Prototype</h1>
             <section id="content">
+                <article>
+                    <h2 style="font-size:40px;margin:0px;">Paper Prototype</h2>
+                    <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h3>
+                    <p>Before starting development of this portfolio, i need to conceptualize the style and how the
+                        interface should look like. My direction is to make a clean minimalist and presentable looking
+                        site
+                        with an intuitive interface.</p>
+                    <h2 style="text-align: center;">The 1st Iteration</h2>
+                    <img class="contentAttachment" src="content/paperProtoPortfolio.png"></img>
+                    <p>I did this first iteration in the early stage of the development of this site. This iteration is
+                        more like a rough estimation for the foundation of this site.</p><br />
+                    <h2 style="text-align: center;">The 2nd Iteration</h2>
+                    <img class="contentAttachment" src="content/paperProtoPortfolio_iterasi2.png"></img>
+                    <p>In the second iteration, i aim to refine and simplify the interface to give a more
+                        <em>presentable</em> outlook of the site. I also added details on how would the colour schemes
+                        be and other features.</p>
+                    <br />
+                    <h2 style="text-align: center;">The 3rd Iteration</h2>
+                    <a href="content/paperProtoPortfolio_iterasi3.png"><img class="contentAttachment" src="content/paperProtoPortfolio_iterasi3.png"></img></a>
+                    <p>In the third iteration i put further details from the previous iteration as i applied the colour
+                        scheme straight unto the prototype to further visualize the would be end product, and to put
+                        more context to describe the reasoning behind each design decisions.</p><br />
+                    <div class="feedback">
+                        <h1>Feedback</h1>
+                        <div class="plus-minus-toggle"></div>
+                        <p style="display: block;font-style: italic;">I have learnt that by making a paper prototype is
+                            the fastest way to start realizing an abstract idea although it requires multiple iterations
+                            to achieve the most desired result.</p>
+                    </div>
+                </article>
+            </section>
+            <br /><br />
+
+            <section id="content">
                 <article id="storyboard">
                     <h2 style="font-size:40px;margin:0px;">Storyboard</h2>
                     <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h3>
@@ -71,39 +105,6 @@ animation: AnimationName 12s ease infinite;">
                             understandable.
                             I now know that a storyboard can be a useful tool for UX design as it enable me to visually
                             portray the scenario easily.</p>
-                    </div>
-                </article>
-            </section>
-            <br /><br />
-            <section id="content">
-                <article>
-                    <h2 style="font-size:40px;margin:0px;">Paper Prototype</h2>
-                    <h3 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 2</h3>
-                    <p>Before starting development of this portfolio, i need to conceptualize the style and how the
-                        interface should look like. My direction is to make a clean minimalist and presentable looking
-                        site
-                        with an intuitive interface.</p>
-                    <h2 style="text-align: center;">The 1st Iteration</h2>
-                    <img class="contentAttachment" src="content/paperProtoPortfolio.png"></img>
-                    <p>I did this first iteration in the early stage of the development of this site. This iteration is
-                        more like a rough estimation for the foundation of this site.</p><br />
-                    <h2 style="text-align: center;">The 2nd Iteration</h2>
-                    <img class="contentAttachment" src="content/paperProtoPortfolio_iterasi2.png"></img>
-                    <p>In the second iteration, i aim to refine and simplify the interface to give a more
-                        <em>presentable</em> outlook of the site. I also added details on how would the colour schemes
-                        be and other features.</p>
-                    <br />
-                    <h2 style="text-align: center;">The 3rd Iteration</h2>
-                    <img class="contentAttachment" src="content/paperProtoPortfolio_iterasi3.png"></img>
-                    <p>In the third iteration i put further details from the previous iteration as i applied the colour
-                        scheme straight unto the prototype to further visualize the would be end product, and to put
-                        more context to describe the reasoning behind each design decisions.</p><br />
-                    <div class="feedback">
-                        <h1>Feedback</h1>
-                        <div class="plus-minus-toggle"></div>
-                        <p style="display: block;font-style: italic;">I have learnt that by making a paper prototype is
-                            the fastest way to start realizing an abstract idea although it requires multiple iterations
-                            to achieve the most desired result.</p>
                     </div>
                 </article>
             </section>
