--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ animation: AnimationName 12s ease infinite;">
                 my studies in the semester 2
                 of ICT &
                 Media Design in Fontys University.<br /><br /><a class="btnContrast" href="about.html"
-                    style="color: white;">About me</a></p>
+                    >About me</a></p>
 
             <!-- <p style="margin-top: 0px;">This site is in development, your consideration is advised.</p> -->
             <!-- <a href="interactiveVisual.html" style="color: white;">Link to the interactive visual.</a> -->
