Added GitHub link to dev.html

--- a/dev.html
+++ b/dev.html
@@ -41,6 +41,14 @@ animation: AnimationName 12s ease infinite;">
         </div>
         <br /><br />
 
+        <section id="content" style="text-align: center;">
+            <div class="contentPlaceholderHidden"><img style="width: 25%;height: auto;"
+                src="content/kisspng-computer-icons-github-clip-art-transparency-free-c-ebess-uq-undergrate-electrical-engineering-stude-5cc270fa39a2f4.0384337715562467782361.png" alt="Missing file"></div>
+            <h2 style="text-align: center;font-size: 40px;">GitHub</h2><a class="btn"
+                href="https://github.com/arief0303/portfolio">Link to the repository of this portfolio</a>
+        </section>
+
+        <br /><br />
         <section id="content">
             <!-- <h1 style="font-size: 4vw; padding:0; margin:0;">Development</h1> -->
             <!--<article>
@@ -111,7 +119,7 @@ animation: AnimationName 12s ease infinite;">
                 <h2 style="font-size: 40px;margin-bottom:0px;">Gallery Slideshow</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
                 <p>To showcase the photograpghy assignment i did for SCO, I wanted to make a gallery slideshow.</p>
-                <p> This POC is a perfect opportunity for me to start learning web development from scratch and with a
+                <p> This POC is a perfect opportunity for me to start learning web development from scratch and with this
                     guidance
                     from <a href="https://www.w3schools.com/howto/howto_js_slideshow.asp">w3school.com</a> i have
                     managed to
