--- a/dev.html
+++ b/dev.html
@@ -359,7 +359,7 @@ controls.rotateSpeed = 0.8;
                     <pre><code>
 // cloner
 var objArray = [];
-for (let i = 0; i <= 16; i++) {
+for (let i = 0; i <= 64; i++) {
 var meshes = new THREE.Mesh(geometry1, material1);
 meshes.position.set(i - 5, i, i);
 
@@ -396,9 +396,9 @@ function animate() {
     
     // golden ratio anim
     for (var x = 0; x < objArray.length; x++) {
-      objArray[x].rotation.x += Math.PI;
-      objArray[x].rotation.y += Math.PI;
-      objArray[x].rotation.z += Math.PI;
+      objArray[x].rotation.x += Math.PI / 2;
+      objArray[x].rotation.y += Math.PI / 4;
+      objArray[x].rotation.z += Math.PI / 4;
     }
   
     renderer.render(scene, camera);
@@ -414,7 +414,7 @@ function animate() {
                 <div class="contentPlaceholder">
                     <pre><code>
 //particle cloner
-for (var i = 0; i < 1024; i++) {
+for (var i = 0; i < 512; i++) {
   var object = new THREE.Mesh(TetrahedronGeometry, material1);
   object.position.x = Math.random() * 1024 - 512;
   object.position.y = Math.random() * 1024 - 512;
@@ -431,8 +431,14 @@ for (var i = 0; i < 1024; i++) {
                 </div>
                 <div class="feedback">
                     <h1>Feedback</h1>
-                    <div class="plus-minus-toggle collapsed"></div>
-                    <p style="display: none;font-style: italic;">No feedback provided yet.</p>
+                    <div class="plus-minus-toggle"></div>
+                    <p style="display: block;font-style: italic;">Feedback from Erik: I received a very positive
+                        feedback for Development and the only question that remains is what would the future holds?(and
+                        i already have some answers from the visions i have to become a much better creative
+                        coder)<br /><br />
+                        #]]Feedback from Chris Geene: I am able to grasp the concept of using
+                        <code>for-loops</code> statements to create objects and manipulate the movements of the objects.
+                        The next step is to to take to another whole new level.</p>
                 </div>
             </article>
         </section>
