--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/styleNoContentMargin.css">
+
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
@@ -29,7 +31,7 @@ animation: AnimationName 12s ease infinite;">
         <iframe class="visualiframe" src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
 
         <div id="aboutMe">
-            <section id="home">
+            <section>
                 <img class="contentAttachment" src="content/sp_img.JPG"></img>
                 <div style="text-align: center;"><h2>My name is Arief, i'm an aspiring creative coder.</h2>
                 <p><em>Since early childhood, i have grown the love for tech.<br /> Growing up, i developed taste for art and aesthetics.<br /> At present, i travelled away from my home country of Indonesia to seek more knowledge and experience.<br /> In the future, i see myself working at the intersection of technology and art. </em></p></div>
