--- a/sprintX.html
+++ b/sprintX.html
@@ -54,12 +54,12 @@ animation: AnimationName 12s ease infinite;">
                     3D graphics
                     library.</p> -->
                 <div class="contentPlaceholder" style="text-align: center;">
-                    <!--<video class="contentAttachment" width="1920" height="1080" controls>
-                        <source src="content/interativeVisualPreview.mp4" type="video/mp4">
+                    <video class="contentAttachment" width="1920" height="1080" controls>
+                        <source src="content/sprintx_teaser.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
-                    <br /><br />-->
-                    <a class="btn" href="interactiveVisual.html">Link to the interactive
+                    <br /><br />
+                    <a class="btn-glow" href="interactiveVisual.html">Link to the interactive
                         visual</a>
                 </div>
                 <p>This was a pet project of mine as i always was interested in creative coding and in Sprint X with the
