--- a/ux.html
+++ b/ux.html
@@ -237,8 +237,13 @@ animation: AnimationName 12s ease infinite;">
                 <article>
                     <h2 style="font-size: 40px;margin-bottom:0px;">Card Sorting</h2>
                     <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 3</h1>
-                    <p></p>Lorem ipsum dolor sit amet.</p>
-                    <div class="contentAttachment" src="content/ConceptingColor.jpg">
+                    <p></p>In this card sorting assignment, i am trying to get user feedback to create a 'radio' site that i am planning to make in the future. <br />Using open card sorting technique i am able to get user feedback before i even start making the site and to see the general pattern of what the general user would expect on a site.</p>
+                    <div class="contentPlaceholder" style="text-align: center;"><p>Test User: Harun </p><img class="contentAttachment" src="content/cardsorting_harun.png"></img>
+                    </div>
+                    <div class="contentPlaceholder" style="text-align: center;"><p>Test User: James </p><img class="contentAttachment" src="content/cardsorting_james.png"></img>
+                    </div>
+                    <div class="contentPlaceholder" style="text-align: center;"><p>Test User: Thupten </p><img class="contentAttachment" src="content/cardsorting_thupten.png"></img>
+                    </div>
                         <div class="feedback">
                             <h1>Feedback</h1>
                             <div class="plus-minus-toggle collapsed"></div>
