--- a/index.html
+++ b/index.html
@@ -8,60 +8,46 @@
     <link rel="stylesheet" href="style/style.css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <link rel="manifest" href="manifest.json?v=2"> 
-    <!-- manifestV2 -->
+    <link rel="manifest" href="manifest.json?v=2">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 
 <body id="main">
-        <header style="background: none;">
-            <button class="hamburger hamburger--collapse" type="button">
-                <span class="hamburger-box">
-                    <span class="hamburger-inner"></span>
-                </span>
-            </button>
-            <div class="headerplaceholder"></div>
-            <div class="headerplaceholder"></div>
-        </header>
+    <header style="background: none;">
+        <button class="hamburger hamburger--collapse" type="button">
+            <span class="hamburger-box">
+                <span class="hamburger-inner"></span>
+            </span>
+        </button>
+        <div class="headerplaceholder"></div>
+        <div class="headerplaceholder"></div>
+    </header>
+    
+    <a class="btn-glow" style="text-decoration: none;position: fixed;
+    bottom: 25px;
+    right: 25px;" 
+        href="interactiveVisual.html">&nbsp;&nbsp;Interactive Visual ⛶&nbsp;&nbsp;</a></p>
 
-        <iframe class="visualiframe" src="./three.js/examples/webgl_marchingcubes.html" frameborder="0"
-            style="position: fixed;"></iframe>
+    <iframe id="visualiframe" src="./three.js/examples/webgl_marchingcubes.html" frameborder="0"
+        style="position: fixed;"></iframe>
 
-        <section id="home">
-            <h1
-                style="text-align: center;margin: 0px; font-size: 12vw; font-weight: bold;
+    <section id="home">
+        <h1
+            style="text-align: center;margin: 0px; font-size: 12vw; font-weight: bold;
     font-style: italic; color: rgb(255, 255, 255); font-style: italic; font-weight: bold; color: rgba(255, 255, 255, 1);">
-                Welcome.</h1>
-            <p style="text-align: center;margin: 0px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
-                accumsan, ligula nec efficitur porttitor, est mauris suscipit ipsum, non ultricies dui justo vel enim.
-                Nam in interdum nulla, in blandit nunc. Aliquam consequat dolor mauris, a aliquam velit consectetur id.
-                Nullam pretium rutrum dolor.<br /><br /><a class="btnContrast"
-                    href="interactiveVisual.html">_fullscreen_</a></p>
-
-            <!-- <p style="margin-top: 0px;">This site is in development, your consideration is advised.</p> -->
-            <!-- <a href="interactiveVisual.html" style="color: white;">Link to the interactive visual.</a> -->
-        </section>
-        <!--<section id="content">
-            <article>
-            <h2 style="font-size: 40px;margin-bottom:0px;">Article Template</h2>
-            <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint X</h1>
-            <p></p>Lorem ipsum dolor sit amet.</p>
-            <div class="contentAttachment" src="content/ConceptingColor.jpg">
-            <div class="feedback">
-                <h1>Feedback</h1>
-                <div class="plus-minus-toggle collapsed"></div>
-                <p style="display: none;font-style: italic;">No feedback provided yet.</p>
-            </div>
-        </article>
-    </section>-->
+            Welcome.</h1>
+        <p style="text-align: center;margin: 0px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+            accumsan, ligula nec efficitur porttitor, est mauris suscipit ipsum, non ultricies dui justo vel enim.
+            Nam in interdum nulla, in blandit nunc. Aliquam consequat dolor mauris, a aliquam velit consectetur id.
+            Nullam pretium rutrum dolor.</p>
+    </section>
 
     <div id="mySidenav" class="sidenav">
         <a href="index.html">Home</a>
-        <a href="sprintX.html">Sprint X</a>
-        <a href="dev.html">Development</a>
-        <a href="ptm.html">Project</a>
-        <a href="ux.html">UX</a>
-        <a href="sco.html">SCO</a>
+        <a href="">Project</a>
+        <a href="">Development</a>
+        <a href="">User Experience Design</a>
+        <a href="">Strategy & Concepting</a>
     </div>
 
     <!-- Scripts -->
