visual performance optimization and lighting adjustments

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             style="text-align: center;margin: 0px; font-size: 12vw; font-weight: bold;
     font-style: italic; color: rgb(255, 255, 255); font-style: italic; font-weight: bold; color: rgba(255, 255, 255, 1);">
             Welcome.</h1>
-        <p style="text-align: center;margin: 0px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+        <!--<p style="text-align: center;margin: 0px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
             accumsan, ligula nec efficitur porttitor, est mauris suscipit ipsum, non ultricies dui justo vel enim.
             Nam in interdum nulla, in blandit nunc. Aliquam consequat dolor mauris, a aliquam velit consectetur id.
-            Nullam pretium rutrum dolor.</p>
+            Nullam pretium rutrum dolor.</p>-->
     </section>
 
     <div id="mySidenav" class="sidenav">
